[package]
name = "sark_pathfinding"
version = "0.3.1"
edition = "2021"
homepage = "https://github.com/sarkahn/sark_pathfinding_rs"
repository = "https://github.com/sarkahn/sark_pathfinding_rs"
license = "MIT"
readme = "README.md"
description = "A simple implementation of the astar pathfinding algorthim from red blob games https://www.redblobgames.com/pathfinding/a-star/implementation.html."
keywords = ["bevy", "pathfinding", "2d", "astar"]

[dependencies]
glam = { version = "0.27" }
smallvec = "1.7.0"
ahash = "0.7.6"
arrayvec = "0.7.2"
sark_grids = {git = "https://github.com/sarkahn/sark_grids_rs.git", version = "0.5.9"}

[dev-dependencies]
bevy = { version = "0.14.1" }
bevy_ascii_terminal = { git = "https://github.com/materialcontext/bevy_ascii_terminal.git", version="0.15" }
noise = "0.7.0"
